# StudyAgent

./: .gitignore  DATABASE_SCHEMA.md  PLANV1.md  README.md  langgraph.json  pyproject.toml
PaperLab/Server/: .env.example  configs.py  dev.py  langgraph.json  pyproject.toml
PaperLab/Server/api/: chat.py  chat_turns.py  config.py  dependencies.py  ingestion.py  main.py  schemas.py
PaperLab/Server/api/routes/: __init__.py  assets.py  chat.py  documents.py  health.py  ingestion.py  retrieval.py  runs.py
PaperLab/Server/configs/: __init__.py
PaperLab/Server/configs/agents/: retriever_worker.yaml  supervisor.yaml  tool_worker.yaml  workspace_worker.yaml
PaperLab/Server/configs/policies/: filesystem.yaml  mcp.yaml  memory.yaml  retrieval.yaml  sandbox.yaml
PaperLab/Server/configs/settings/: __init__.py  agent_settings.py  api_settings.py  base.py
PaperLab/Server/docs/: architecture.md  orchestration-lessons-learned.md
PaperLab/Server/src/contracts/: __init__.py  artifact_ref.py  citation_ref.py  execution_event.py  task_envelope.py  worker_result.py
PaperLab/Server/src/documents/: __init__.py  chunking.py  document_scan.py  pdf_parser.py
PaperLab/Server/src/domain/: __init__.py  documents.py  evidence.py  memory.py  models.py  ports.py  tasks.py
PaperLab/Server/src/generation/: __init__.py  asset_selection.py  citation_formatter.py  message_builders.py  multimodal_context.py
PaperLab/Server/src/indexing/: __init__.py  asset_indexer.py  chunk_indexer.py  document_indexer.py
PaperLab/Server/src/integrations/: __init__.py
PaperLab/Server/src/memory/: __init__.py  models.py  policy.py  service.py
PaperLab/Server/src/orchestration/: __init__.py  assessment.py  debug_logger.py  graph_messages.py  graph_serialization.py  graph_state.py  guidance_queue.py  output_summary.py  request_config.py  runtime_access.py  supervisor.py
PaperLab/Server/src/prompts/: __init__.py  builders.py
PaperLab/Server/src/retrieval/: __init__.py  evidence_pack.py  fusion.py  retriever.py
PaperLab/Server/src/runtime/: __init__.py  dependencies.py  settings.py
PaperLab/Server/src/session_storage/: models.py  (+2 more)
PaperLab/Server/tests/: test_assess_answer_or_loop.py  test_assessment.py  test_chat_session_api.py  test_chat_turns_answer_filter.py  test_document_project_defaults.py  test_document_scan.py  test_entrypoints.py  test_guidance_pending_queue.py  test_guidance_queue.py  test_indexing_and_assets.py  test_layout.py  test_markdown_memory_store.py  test_output_summary.py  test_pdf_parser_title_extraction.py  test_phase_boundaries.py  test_prompt_cache_order.py  test_reproduce_core.py  test_reproduce_locks.py  test_retrieve_agent_tools.py  test_runtime_compat.py  test_sandbox.py  test_session_storage.py  test_supervisor_graph_order.py  test_supervisor_main_route.py  test_supervisor_memory_decision.py  test_supervisor_speculative_execution.py  test_supervisor_subgraph_dispatch.py  test_workspace_implementation.py  test_workspace_policy.py  test_workspace_tools.py
PaperLab/codingAgents/backend/: .env.example  main.py  pyproject.toml
apps/api/: README.md  pyproject.toml
apps/api/tests/: test_retrieval_schemas.py
(+129 files in other folders)
