[project]
name = "study-agent-workspace"
version = "0.1.0"
description = "Workspace root for the StudyAgent learning project"
requires-python = ">=3.11"
dependencies = [
  "langgraph-cli[inmem]>=0.4.0",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/agents",
  "packages/application",
  "packages/documents",
  "packages/domain",
  "packages/integrations",
]

[tool.uv.sources]
study-agent-api = { workspace = true }
study-agent-agents = { workspace = true }
study-agent-application = { workspace = true }
study-agent-documents = { workspace = true }
study-agent-domain = { workspace = true }
study-agent-integrations = { workspace = true }
